# asobann_app

./: .dockerignore  .gitignore  CREATING_USER_CONTENT.md  Dockerfile.aws  Dockerfile.awsdev  Dockerfile.awsprod  Dockerfile.localdev  Dockerfile.localdev.test  LICENSE  Pipfile  Procfile  README.md  env  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  webpack.config.js
artwork/: TetradrachmOfAthens_head.xcf  TetradrachmOfAthens_tail.xcf  menuabout_bg.xcf  menuheader_bg.xcf  menuitem_bg.xcf
deploy/localdev/: .gitignore  docker-compose.yml
docs/: architecture.md  configuration.md  development.md  sync-protocol.md
scripts/: init_db  runtest  up
src/: generate_table_json.py
src/asobann/: __init__.py  app.py  components.py  config.py  config_common.py  config_dev.py  config_production.py  config_test.py  default.json  default_data.json  default_table.json  deploy.py  generate_table_json.py  initial_deploy_data.json  kits.py  playing_card.json  table.py  tables.py  test_server.py  wsgi.py
src/js/: auth.js  cardistry.js  craft_box.js  dev_inspector.js  feat.js  foo.js  i18n.js  login.js  menu.js  names.js  package.json  play_session.js  sync_table.js  table.js  toolbox.js  util.js
src/style/: game.css
tests/: conftest.py  entry_for_test_container.sh  geckodriver.example
tests/api/: conftest.py  test_upload_component.py  test_upload_kit.py
tests/e2e/: conftest.py  craft_box_helper.py  helper.py  table_for_e2etests.json  test_cardistry.py  test_component.py  test_craft_box.py  test_golden_path.py  test_kit.py  (+7 more)
(+82 files in other folders)
