[metadata]
license_file = LICENSE

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:eventlet
    ignore::DeprecationWarning:dns
    ignore:Monkey-patching::
markers =
    loadtest: load tests using heroku
addopts = -m "not loadtest" --ignore tests/performance

[coverage:run]
branch = True
source = src/asobann
